# smart-regex

./: .gitignore  Cargo.toml  README.md  programmingParadigm.md
benches/: matcher_bench.rs
src/: demo.rs  lib.rs  main.rs
src/basic/: antimirov.rs  brzozowski.rs  common.rs  mod.rs  naive.rs  regex.rs
src/posix/: debug.rs  inject.rs  mk_eps.rs  mod.rs  parse_tree.rs  parser.rs
tests/: basic_tests.rs  flatten_tests.rs  matcher_tests.rs  mk_eps_tests.rs  paper_tests.rs  posix_tests.rs
